@@ -548,7 +548,9 @@ RestStatus RestAgencyHandler::handleState() {
     body.add(VPackValue(VPackValueType::Object));
     body.add("index", VPackValue(i.index));
     body.add("term", VPackValue(i.term));
-    body.add("query", VPackSlice(i.entry->data()));
+    if (i.entry != nullptr) {
+      body.add("query", VPackSlice(i.entry->data()));
+    }
     body.add("clientId", VPackValue(i.clientId));
     body.close();
   }
